--- a/Tables/Table1_SummaryStatistics_Replication.html
+++ b/Tables/Table1_SummaryStatistics_Replication.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="mrayyfuoio" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#mrayyfuoio table {
+<div id="ouehsjrjlb" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#ouehsjrjlb table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#mrayyfuoio thead, #mrayyfuoio tbody, #mrayyfuoio tfoot, #mrayyfuoio tr, #mrayyfuoio td, #mrayyfuoio th {
+#ouehsjrjlb thead, #ouehsjrjlb tbody, #ouehsjrjlb tfoot, #ouehsjrjlb tr, #ouehsjrjlb td, #ouehsjrjlb th {
   border-style: none;
 }
 
-#mrayyfuoio p {
+#ouehsjrjlb p {
   margin: 0;
   padding: 0;
 }
 
-#mrayyfuoio .gt_table {
+#ouehsjrjlb .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_caption {
+#ouehsjrjlb .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#mrayyfuoio .gt_title {
+#ouehsjrjlb .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#mrayyfuoio .gt_subtitle {
+#ouehsjrjlb .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#mrayyfuoio .gt_heading {
+#ouehsjrjlb .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_bottom_border {
+#ouehsjrjlb .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_col_headings {
+#ouehsjrjlb .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_col_heading {
+#ouehsjrjlb .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#mrayyfuoio .gt_column_spanner_outer {
+#ouehsjrjlb .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#mrayyfuoio .gt_column_spanner_outer:first-child {
+#ouehsjrjlb .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#mrayyfuoio .gt_column_spanner_outer:last-child {
+#ouehsjrjlb .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#mrayyfuoio .gt_column_spanner {
+#ouehsjrjlb .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#mrayyfuoio .gt_spanner_row {
+#ouehsjrjlb .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#mrayyfuoio .gt_group_heading {
+#ouehsjrjlb .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#mrayyfuoio .gt_empty_group_heading {
+#ouehsjrjlb .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#mrayyfuoio .gt_from_md > :first-child {
+#ouehsjrjlb .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#mrayyfuoio .gt_from_md > :last-child {
+#ouehsjrjlb .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#mrayyfuoio .gt_row {
+#ouehsjrjlb .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#mrayyfuoio .gt_stub {
+#ouehsjrjlb .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#mrayyfuoio .gt_stub_row_group {
+#ouehsjrjlb .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#mrayyfuoio .gt_row_group_first td {
+#ouehsjrjlb .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#mrayyfuoio .gt_row_group_first th {
+#ouehsjrjlb .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#mrayyfuoio .gt_summary_row {
+#ouehsjrjlb .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#mrayyfuoio .gt_first_summary_row {
+#ouehsjrjlb .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_first_summary_row.thick {
+#ouehsjrjlb .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#mrayyfuoio .gt_last_summary_row {
+#ouehsjrjlb .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_grand_summary_row {
+#ouehsjrjlb .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#mrayyfuoio .gt_first_grand_summary_row {
+#ouehsjrjlb .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_last_grand_summary_row_top {
+#ouehsjrjlb .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_striped {
+#ouehsjrjlb .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#mrayyfuoio .gt_table_body {
+#ouehsjrjlb .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_footnotes {
+#ouehsjrjlb .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_footnote {
+#ouehsjrjlb .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#mrayyfuoio .gt_sourcenotes {
+#ouehsjrjlb .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#mrayyfuoio .gt_sourcenote {
+#ouehsjrjlb .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,130 +387,167 @@
   padding-right: 5px;
 }
 
-#mrayyfuoio .gt_left {
+#ouehsjrjlb .gt_left {
   text-align: left;
 }
 
-#mrayyfuoio .gt_center {
+#ouehsjrjlb .gt_center {
   text-align: center;
 }
 
-#mrayyfuoio .gt_right {
+#ouehsjrjlb .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#mrayyfuoio .gt_font_normal {
+#ouehsjrjlb .gt_font_normal {
   font-weight: normal;
 }
 
-#mrayyfuoio .gt_font_bold {
+#ouehsjrjlb .gt_font_bold {
   font-weight: bold;
 }
 
-#mrayyfuoio .gt_font_italic {
+#ouehsjrjlb .gt_font_italic {
   font-style: italic;
 }
 
-#mrayyfuoio .gt_super {
+#ouehsjrjlb .gt_super {
   font-size: 65%;
 }
 
-#mrayyfuoio .gt_footnote_marks {
+#ouehsjrjlb .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#mrayyfuoio .gt_asterisk {
+#ouehsjrjlb .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#mrayyfuoio .gt_indent_1 {
+#ouehsjrjlb .gt_indent_1 {
   text-indent: 5px;
 }
 
-#mrayyfuoio .gt_indent_2 {
+#ouehsjrjlb .gt_indent_2 {
   text-indent: 10px;
 }
 
-#mrayyfuoio .gt_indent_3 {
+#ouehsjrjlb .gt_indent_3 {
   text-indent: 15px;
 }
 
-#mrayyfuoio .gt_indent_4 {
+#ouehsjrjlb .gt_indent_4 {
   text-indent: 20px;
 }
 
-#mrayyfuoio .gt_indent_5 {
+#ouehsjrjlb .gt_indent_5 {
   text-indent: 25px;
 }
 
-#mrayyfuoio .katex-display {
+#ouehsjrjlb .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#mrayyfuoio div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#ouehsjrjlb div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
   <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
   <thead>
     <tr class="gt_heading">
-      <td colspan="3" class="gt_heading gt_title gt_font_normal gt_bottom_border" style>Table 2: Marriage outcomes, women unmarried at program start</td>
+      <td colspan="5" class="gt_heading gt_title gt_font_normal gt_bottom_border" style>Table 1: Sample summary statistics</td>
     </tr>
     
     <tr class="gt_col_headings gt_spanner_row">
-      <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id="a-"> </th>
-      <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="2" scope="colgroup" id="Married &lt; 18">
-        <div class="gt_column_spanner">Married &lt; 18</div>
+      <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id="Label">Label</th>
+      <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="2" scope="colgroup" id="Girls age 15-17 (N=15576)">
+        <div class="gt_column_spanner">Girls age 15-17 (N=15576)</div>
+      </th>
+      <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="2" scope="colgroup" id="Girls age 15 (N=5871)">
+        <div class="gt_column_spanner">Girls age 15 (N=5871)</div>
       </th>
     </tr>
     <tr class="gt_col_headings">
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="Age-15-17">Age 15-17</th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="Age-15">Age 15</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="mean_all">Mean</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="sd_all">S.D.</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="mean_15">Mean</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="sd_15">S.D.</th>
     </tr>
   </thead>
   <tbody class="gt_table_body">
-    <tr><td headers=" " class="gt_row gt_left" style="text-align: center;">Empowerment</td>
-<td headers="Age 15-17" class="gt_row gt_center" style="text-align: center;">-0.008</td>
-<td headers="Age 15" class="gt_row gt_center" style="text-align: center;">-0.006</td></tr>
-    <tr><td headers=" " class="gt_row gt_left" style="text-align: center;"></td>
-<td headers="Age 15-17" class="gt_row gt_center" style="text-align: center;">(0.008)</td>
-<td headers="Age 15" class="gt_row gt_center" style="text-align: center;">(0.015)</td></tr>
-    <tr><td headers=" " class="gt_row gt_left" style="text-align: center;">Incentive</td>
-<td headers="Age 15-17" class="gt_row gt_center" style="text-align: center;">-0.048***</td>
-<td headers="Age 15" class="gt_row gt_center" style="text-align: center;">-0.074***</td></tr>
-    <tr><td headers=" " class="gt_row gt_left" style="text-align: center;"></td>
-<td headers="Age 15-17" class="gt_row gt_center" style="text-align: center;">(0.010)</td>
-<td headers="Age 15" class="gt_row gt_center" style="text-align: center;">(0.019)</td></tr>
-    <tr><td headers=" " class="gt_row gt_left" style="text-align: center;">Incen.*Empow.</td>
-<td headers="Age 15-17" class="gt_row gt_center" style="text-align: center;">0.019</td>
-<td headers="Age 15" class="gt_row gt_center" style="text-align: center;">0.027</td></tr>
-    <tr><td headers=" " class="gt_row gt_left" style="border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #000000; text-align: center;"></td>
-<td headers="Age 15-17" class="gt_row gt_center" style="border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #000000; text-align: center;">(0.015)</td>
-<td headers="Age 15" class="gt_row gt_center" style="border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #000000; text-align: center;">(0.027)</td></tr>
-    <tr><td headers=" " class="gt_row gt_left" style="text-align: center;">Num.Obs.</td>
-<td headers="Age 15-17" class="gt_row gt_center" style="text-align: center;">15549</td>
-<td headers="Age 15" class="gt_row gt_center" style="text-align: center;">5861</td></tr>
-    <tr><td headers=" " class="gt_row gt_left" style="text-align: center;">R2</td>
-<td headers="Age 15-17" class="gt_row gt_center" style="text-align: center;">0.082</td>
-<td headers="Age 15" class="gt_row gt_center" style="text-align: center;">0.079</td></tr>
-    <tr><td headers=" " class="gt_row gt_left" style="text-align: center;">Control Mean</td>
-<td headers="Age 15-17" class="gt_row gt_center" style="text-align: center;">0.293</td>
-<td headers="Age 15" class="gt_row gt_center" style="text-align: center;">0.385</td></tr>
-    <tr><td headers=" " class="gt_row gt_left" style="text-align: center;">FE: Union</td>
-<td headers="Age 15-17" class="gt_row gt_center" style="text-align: center;">Yes</td>
-<td headers="Age 15" class="gt_row gt_center" style="text-align: center;">Yes</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Age at Endline</td>
+<td headers="mean_all" class="gt_row gt_right">23.4</td>
+<td headers="sd_all" class="gt_row gt_right">0.8</td>
+<td headers="mean_15" class="gt_row gt_right">22.5</td>
+<td headers="sd_15" class="gt_row gt_right">0.3</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Ever married (%)</td>
+<td headers="mean_all" class="gt_row gt_right">83.6</td>
+<td headers="sd_all" class="gt_row gt_right">37.1</td>
+<td headers="mean_15" class="gt_row gt_right">81.4</td>
+<td headers="sd_15" class="gt_row gt_right">38.9</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Married &lt; 18 (%)</td>
+<td headers="mean_all" class="gt_row gt_right">27.6</td>
+<td headers="sd_all" class="gt_row gt_right">44.7</td>
+<td headers="mean_15" class="gt_row gt_right">36.3</td>
+<td headers="sd_15" class="gt_row gt_right">48.1</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Married &lt; 16 (%)</td>
+<td headers="mean_all" class="gt_row gt_right">4.2</td>
+<td headers="sd_all" class="gt_row gt_right">20.0</td>
+<td headers="mean_15" class="gt_row gt_right">10.9</td>
+<td headers="sd_15" class="gt_row gt_right">31.2</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Ever birth (%)</td>
+<td headers="mean_all" class="gt_row gt_right">62.5</td>
+<td headers="sd_all" class="gt_row gt_right">48.4</td>
+<td headers="mean_15" class="gt_row gt_right">59.0</td>
+<td headers="sd_15" class="gt_row gt_right">49.2</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Birth &lt; 20 (%)</td>
+<td headers="mean_all" class="gt_row gt_right">23.9</td>
+<td headers="sd_all" class="gt_row gt_right">42.6</td>
+<td headers="mean_15" class="gt_row gt_right">31.7</td>
+<td headers="sd_15" class="gt_row gt_right">46.5</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Dowry (USD, conditional on married)</td>
+<td headers="mean_all" class="gt_row gt_right">921.9</td>
+<td headers="sd_all" class="gt_row gt_right">934.8</td>
+<td headers="mean_15" class="gt_row gt_right">885.8</td>
+<td headers="sd_15" class="gt_row gt_right">897.2</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Arranged marriage (%)</td>
+<td headers="mean_all" class="gt_row gt_right">88.7</td>
+<td headers="sd_all" class="gt_row gt_right">31.6</td>
+<td headers="mean_15" class="gt_row gt_right">88.9</td>
+<td headers="sd_15" class="gt_row gt_right">31.4</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Age gap (Husband-Wife)</td>
+<td headers="mean_all" class="gt_row gt_right">5.6</td>
+<td headers="sd_all" class="gt_row gt_right">4.4</td>
+<td headers="mean_15" class="gt_row gt_right">5.9</td>
+<td headers="sd_15" class="gt_row gt_right">4.3</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Husband from outside village (%)</td>
+<td headers="mean_all" class="gt_row gt_right">90.3</td>
+<td headers="sd_all" class="gt_row gt_right">29.6</td>
+<td headers="mean_15" class="gt_row gt_right">89.7</td>
+<td headers="sd_15" class="gt_row gt_right">30.4</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Still in school (%)</td>
+<td headers="mean_all" class="gt_row gt_right">22.0</td>
+<td headers="sd_all" class="gt_row gt_right">41.4</td>
+<td headers="mean_15" class="gt_row gt_right">24.5</td>
+<td headers="sd_15" class="gt_row gt_right">43.0</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Last class passed</td>
+<td headers="mean_all" class="gt_row gt_right">9.8</td>
+<td headers="sd_all" class="gt_row gt_right">4.3</td>
+<td headers="mean_15" class="gt_row gt_right">9.8</td>
+<td headers="sd_15" class="gt_row gt_right">4.1</td></tr>
+    <tr><td headers="Label" class="gt_row gt_left">Currently working (%)</td>
+<td headers="mean_all" class="gt_row gt_right">11.8</td>
+<td headers="sd_all" class="gt_row gt_right">32.3</td>
+<td headers="mean_15" class="gt_row gt_right">11.6</td>
+<td headers="sd_15" class="gt_row gt_right">32.1</td></tr>
   </tbody>
   <tfoot>
     <tr class="gt_sourcenotes">
-      <td class="gt_sourcenote" colspan="3">* p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01</td>
-    </tr>
-    <tr class="gt_sourcenotes">
-      <td class="gt_sourcenote" colspan="3">Notes: Standard errors clustered at the village level in parentheses. Replication of Buchmann et al. (2023).</td>
+      <td class="gt_sourcenote" colspan="5">Replication of Buchmann et al. (2023)</td>
     </tr>
   </tfoot>
 </table>
