--- a/Heterogeneity analysis/Causal ML/Causal ML/Table_Heterogeneity_Profile.html
+++ b/Heterogeneity analysis/Causal ML/Causal ML/Table_Heterogeneity_Profile.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="iggzjxvwzk" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#iggzjxvwzk table {
+<div id="bmxqcrbely" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#bmxqcrbely table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#iggzjxvwzk thead, #iggzjxvwzk tbody, #iggzjxvwzk tfoot, #iggzjxvwzk tr, #iggzjxvwzk td, #iggzjxvwzk th {
+#bmxqcrbely thead, #bmxqcrbely tbody, #bmxqcrbely tfoot, #bmxqcrbely tr, #bmxqcrbely td, #bmxqcrbely th {
   border-style: none;
 }
 
-#iggzjxvwzk p {
+#bmxqcrbely p {
   margin: 0;
   padding: 0;
 }
 
-#iggzjxvwzk .gt_table {
+#bmxqcrbely .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_caption {
+#bmxqcrbely .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#iggzjxvwzk .gt_title {
+#bmxqcrbely .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#iggzjxvwzk .gt_subtitle {
+#bmxqcrbely .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#iggzjxvwzk .gt_heading {
+#bmxqcrbely .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_bottom_border {
+#bmxqcrbely .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_col_headings {
+#bmxqcrbely .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_col_heading {
+#bmxqcrbely .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#iggzjxvwzk .gt_column_spanner_outer {
+#bmxqcrbely .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#iggzjxvwzk .gt_column_spanner_outer:first-child {
+#bmxqcrbely .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#iggzjxvwzk .gt_column_spanner_outer:last-child {
+#bmxqcrbely .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#iggzjxvwzk .gt_column_spanner {
+#bmxqcrbely .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#iggzjxvwzk .gt_spanner_row {
+#bmxqcrbely .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#iggzjxvwzk .gt_group_heading {
+#bmxqcrbely .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#iggzjxvwzk .gt_empty_group_heading {
+#bmxqcrbely .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#iggzjxvwzk .gt_from_md > :first-child {
+#bmxqcrbely .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#iggzjxvwzk .gt_from_md > :last-child {
+#bmxqcrbely .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#iggzjxvwzk .gt_row {
+#bmxqcrbely .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#iggzjxvwzk .gt_stub {
+#bmxqcrbely .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#iggzjxvwzk .gt_stub_row_group {
+#bmxqcrbely .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#iggzjxvwzk .gt_row_group_first td {
+#bmxqcrbely .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#iggzjxvwzk .gt_row_group_first th {
+#bmxqcrbely .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#iggzjxvwzk .gt_summary_row {
+#bmxqcrbely .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#iggzjxvwzk .gt_first_summary_row {
+#bmxqcrbely .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_first_summary_row.thick {
+#bmxqcrbely .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#iggzjxvwzk .gt_last_summary_row {
+#bmxqcrbely .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_grand_summary_row {
+#bmxqcrbely .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#iggzjxvwzk .gt_first_grand_summary_row {
+#bmxqcrbely .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_last_grand_summary_row_top {
+#bmxqcrbely .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_striped {
+#bmxqcrbely .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#iggzjxvwzk .gt_table_body {
+#bmxqcrbely .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_footnotes {
+#bmxqcrbely .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_footnote {
+#bmxqcrbely .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#iggzjxvwzk .gt_sourcenotes {
+#bmxqcrbely .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#iggzjxvwzk .gt_sourcenote {
+#bmxqcrbely .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,72 +387,72 @@
   padding-right: 5px;
 }
 
-#iggzjxvwzk .gt_left {
+#bmxqcrbely .gt_left {
   text-align: left;
 }
 
-#iggzjxvwzk .gt_center {
+#bmxqcrbely .gt_center {
   text-align: center;
 }
 
-#iggzjxvwzk .gt_right {
+#bmxqcrbely .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#iggzjxvwzk .gt_font_normal {
+#bmxqcrbely .gt_font_normal {
   font-weight: normal;
 }
 
-#iggzjxvwzk .gt_font_bold {
+#bmxqcrbely .gt_font_bold {
   font-weight: bold;
 }
 
-#iggzjxvwzk .gt_font_italic {
+#bmxqcrbely .gt_font_italic {
   font-style: italic;
 }
 
-#iggzjxvwzk .gt_super {
+#bmxqcrbely .gt_super {
   font-size: 65%;
 }
 
-#iggzjxvwzk .gt_footnote_marks {
+#bmxqcrbely .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#iggzjxvwzk .gt_asterisk {
+#bmxqcrbely .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#iggzjxvwzk .gt_indent_1 {
+#bmxqcrbely .gt_indent_1 {
   text-indent: 5px;
 }
 
-#iggzjxvwzk .gt_indent_2 {
+#bmxqcrbely .gt_indent_2 {
   text-indent: 10px;
 }
 
-#iggzjxvwzk .gt_indent_3 {
+#bmxqcrbely .gt_indent_3 {
   text-indent: 15px;
 }
 
-#iggzjxvwzk .gt_indent_4 {
+#bmxqcrbely .gt_indent_4 {
   text-indent: 20px;
 }
 
-#iggzjxvwzk .gt_indent_5 {
+#bmxqcrbely .gt_indent_5 {
   text-indent: 25px;
 }
 
-#iggzjxvwzk .katex-display {
+#bmxqcrbely .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#iggzjxvwzk div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#bmxqcrbely div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
