--- a/Replicating Results/Tables/Table2_Replication.html
+++ b/Replicating Results/Tables/Table2_Replication.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="dahtypxvkp" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#dahtypxvkp table {
+<div id="lezkjhoptl" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#lezkjhoptl table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#dahtypxvkp thead, #dahtypxvkp tbody, #dahtypxvkp tfoot, #dahtypxvkp tr, #dahtypxvkp td, #dahtypxvkp th {
+#lezkjhoptl thead, #lezkjhoptl tbody, #lezkjhoptl tfoot, #lezkjhoptl tr, #lezkjhoptl td, #lezkjhoptl th {
   border-style: none;
 }
 
-#dahtypxvkp p {
+#lezkjhoptl p {
   margin: 0;
   padding: 0;
 }
 
-#dahtypxvkp .gt_table {
+#lezkjhoptl .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_caption {
+#lezkjhoptl .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#dahtypxvkp .gt_title {
+#lezkjhoptl .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#dahtypxvkp .gt_subtitle {
+#lezkjhoptl .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#dahtypxvkp .gt_heading {
+#lezkjhoptl .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_bottom_border {
+#lezkjhoptl .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_col_headings {
+#lezkjhoptl .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_col_heading {
+#lezkjhoptl .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#dahtypxvkp .gt_column_spanner_outer {
+#lezkjhoptl .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#dahtypxvkp .gt_column_spanner_outer:first-child {
+#lezkjhoptl .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#dahtypxvkp .gt_column_spanner_outer:last-child {
+#lezkjhoptl .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#dahtypxvkp .gt_column_spanner {
+#lezkjhoptl .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#dahtypxvkp .gt_spanner_row {
+#lezkjhoptl .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#dahtypxvkp .gt_group_heading {
+#lezkjhoptl .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#dahtypxvkp .gt_empty_group_heading {
+#lezkjhoptl .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#dahtypxvkp .gt_from_md > :first-child {
+#lezkjhoptl .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#dahtypxvkp .gt_from_md > :last-child {
+#lezkjhoptl .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#dahtypxvkp .gt_row {
+#lezkjhoptl .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#dahtypxvkp .gt_stub {
+#lezkjhoptl .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#dahtypxvkp .gt_stub_row_group {
+#lezkjhoptl .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#dahtypxvkp .gt_row_group_first td {
+#lezkjhoptl .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#dahtypxvkp .gt_row_group_first th {
+#lezkjhoptl .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#dahtypxvkp .gt_summary_row {
+#lezkjhoptl .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#dahtypxvkp .gt_first_summary_row {
+#lezkjhoptl .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_first_summary_row.thick {
+#lezkjhoptl .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#dahtypxvkp .gt_last_summary_row {
+#lezkjhoptl .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_grand_summary_row {
+#lezkjhoptl .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#dahtypxvkp .gt_first_grand_summary_row {
+#lezkjhoptl .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_last_grand_summary_row_top {
+#lezkjhoptl .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_striped {
+#lezkjhoptl .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#dahtypxvkp .gt_table_body {
+#lezkjhoptl .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_footnotes {
+#lezkjhoptl .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_footnote {
+#lezkjhoptl .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#dahtypxvkp .gt_sourcenotes {
+#lezkjhoptl .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#dahtypxvkp .gt_sourcenote {
+#lezkjhoptl .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,72 +387,72 @@
   padding-right: 5px;
 }
 
-#dahtypxvkp .gt_left {
+#lezkjhoptl .gt_left {
   text-align: left;
 }
 
-#dahtypxvkp .gt_center {
+#lezkjhoptl .gt_center {
   text-align: center;
 }
 
-#dahtypxvkp .gt_right {
+#lezkjhoptl .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#dahtypxvkp .gt_font_normal {
+#lezkjhoptl .gt_font_normal {
   font-weight: normal;
 }
 
-#dahtypxvkp .gt_font_bold {
+#lezkjhoptl .gt_font_bold {
   font-weight: bold;
 }
 
-#dahtypxvkp .gt_font_italic {
+#lezkjhoptl .gt_font_italic {
   font-style: italic;
 }
 
-#dahtypxvkp .gt_super {
+#lezkjhoptl .gt_super {
   font-size: 65%;
 }
 
-#dahtypxvkp .gt_footnote_marks {
+#lezkjhoptl .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#dahtypxvkp .gt_asterisk {
+#lezkjhoptl .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#dahtypxvkp .gt_indent_1 {
+#lezkjhoptl .gt_indent_1 {
   text-indent: 5px;
 }
 
-#dahtypxvkp .gt_indent_2 {
+#lezkjhoptl .gt_indent_2 {
   text-indent: 10px;
 }
 
-#dahtypxvkp .gt_indent_3 {
+#lezkjhoptl .gt_indent_3 {
   text-indent: 15px;
 }
 
-#dahtypxvkp .gt_indent_4 {
+#lezkjhoptl .gt_indent_4 {
   text-indent: 20px;
 }
 
-#dahtypxvkp .gt_indent_5 {
+#lezkjhoptl .gt_indent_5 {
   text-indent: 25px;
 }
 
-#dahtypxvkp .katex-display {
+#lezkjhoptl .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#dahtypxvkp div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#lezkjhoptl div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
